deployment/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube_gopc
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube_gopc
            port:
              number: 8080
